# django-allauth-sniperlinks

./: pyproject.toml
allauth_sniperlinks/: app_settings.py  context_processors.py  signals.py  utils.py
allauth_sniperlinks/management/commands/: clear_sniperlink_cache.py
