[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-allauth-sniperlinks"
version = "0.3"
description = "A Django app to provide sniper links for allauth email verification."
authors = [{name = "Anna Maste", email = "anna@subscribesense.com"}]
license = {text = "MIT"}
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Email",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.6"
dependencies = [
    "Django>=3.2",
    "django-allauth>=0.41.0",
    "tld>=0.12.6",
    "dnspython>=2.2.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown; variant=GFM"

[project.urls]
Repository = "https://github.com/skulegirl/django-allauth-sniperlinks"

[tool.setuptools.packages]
find = {namespaces = false}
